<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.login.LoginFragment">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="@dimen/logo_dimen"
        android:layout_height="@dimen/logo_dimen"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:src="@drawable/app_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvLoginTitle"
        android:text="@string/label_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_16dp"
        android:layout_marginTop="@dimen/dimen_32dp"
        app:layout_constraintTop_toBottomOf="@id/img_logo"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/DistoryTextStyle.Bold.Heading1"/>

    <TextView
        android:id="@+id/tvLoginSubtitle"
        android:text="@string/label_login_subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_16dp"
        android:layout_marginTop="@dimen/dimen_8dp"
        app:layout_constraintTop_toBottomOf="@id/tvLoginTitle"
        app:layout_constraintStart_toStartOf="@id/tvLoginTitle"
        style="@style/DistoryTextStyle.Bold.Heading2.DarkGrey"/>

    <TextView
        android:id="@+id/tvEmailLabel"
        style="@style/DistoryTextStyle.Regular.Heading4.DarkGrey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_24dp"
        android:layout_marginHorizontal="@dimen/dimen_16dp"
        android:text="@string/label_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvLoginSubtitle" />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:background="@drawable/bg_bordered_edit_text"
        android:hint="@string/hint_email"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_16dp"
        android:layout_marginTop="@dimen/dimen_12dp"
        android:textSize="14sp"
        android:padding="@dimen/dimen_16dp"
        app:layout_constraintTop_toBottomOf="@id/tvEmailLabel"
        android:autofillHints="emailAddress" />

    <TextView
        android:id="@+id/tvPasswordLabel"
        android:text="@string/label_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_16dp"
        app:layout_constraintTop_toBottomOf="@id/edtEmail"
        app:layout_constraintStart_toStartOf="@id/edtEmail"/>

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen_16dp"
        android:layout_marginHorizontal="@dimen/dimen_16dp"
        android:inputType="textPassword"
        android:textSize="14sp"
        android:background="@drawable/bg_bordered_edit_text"
        android:maxLines="1"
        android:hint="@string/hint_password"
        android:layout_marginTop="@dimen/dimen_12dp"
        app:layout_constraintTop_toBottomOf="@id/tvPasswordLabel"
        android:autofillHints="password" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        android:layout_marginHorizontal="@dimen/dimen_16dp"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:paddingVertical="@dimen/dimen_16dp"
        android:text="@string/action_login"
        style="@style/DistoryButton.WhiteText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtPassword" />

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginHorizontal="@dimen/dimen_16dp"
        app:layout_constraintEnd_toStartOf="@id/tvRegisterHere"
        app:layout_constraintStart_toStartOf="parent"
        app:dividerColor="@color/grey_400"
        app:layout_constraintTop_toTopOf="@id/tvRegisterHere"
        app:layout_constraintBottom_toBottomOf="@id/tvRegisterHere" />

    <TextView
        android:id="@+id/tvRegisterHere"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_register_here"
        android:layout_marginTop="@dimen/dimen_24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginHorizontal="@dimen/dimen_16dp"
        app:layout_constraintStart_toEndOf="@id/tvRegisterHere"
        app:layout_constraintEnd_toEndOf="parent"
        app:dividerColor="@color/grey_400"
        app:layout_constraintTop_toTopOf="@id/tvRegisterHere"
        app:layout_constraintBottom_toBottomOf="@id/tvRegisterHere" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRegister"
        android:layout_marginHorizontal="@dimen/dimen_16dp"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:paddingVertical="@dimen/dimen_16dp"
        android:text="@string/action_register"
        style="@style/DistorySecondaryButton.WhiteText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvRegisterHere" />

    <include
        android:id="@+id/loading_layout"
        android:visibility="gone"
        layout="@layout/layout_loading" />

</androidx.constraintlayout.widget.ConstraintLayout>