<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.register.RegisterFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_back" />

        <TextView
            android:id="@+id/tvLoginTitle"
            android:text="@string/label_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_16dp"
            android:layout_marginTop="@dimen/dimen_32dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/DistoryTextStyle.Bold.Heading1"/>

        <TextView
            android:id="@+id/tvLoginSubtitle"
            android:text="@string/label_register_subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen_16dp"
            android:layout_marginTop="@dimen/dimen_8dp"
            app:layout_constraintTop_toBottomOf="@id/tvLoginTitle"
            app:layout_constraintStart_toStartOf="@id/tvLoginTitle"
            style="@style/DistoryTextStyle.Bold.Heading2.DarkGrey"/>

        <TextView
            android:id="@+id/tvNameLabel"
            style="@style/DistoryTextStyle.Regular.Heading4.DarkGrey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_24dp"
            android:layout_marginHorizontal="@dimen/dimen_16dp"
            android:text="@string/label_full_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvLoginSubtitle" />

        <com.ibnu.distory.base.component.FullNameEditText
            android:id="@+id/edtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen_16dp"
            android:layout_marginTop="@dimen/dimen_12dp"
            android:padding="@dimen/dimen_16dp"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/tvEmailLabel" />

        <TextView
            android:id="@+id/tvEmailLabel"
            style="@style/DistoryTextStyle.Regular.Heading4.DarkGrey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:layout_marginHorizontal="@dimen/dimen_16dp"
            android:text="@string/label_email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvLoginSubtitle" />

        <com.ibnu.distory.base.component.EmailEditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen_16dp"
            android:layout_marginTop="@dimen/dimen_12dp"
            android:textSize="14sp"
            android:padding="@dimen/dimen_16dp"
            app:layout_constraintTop_toBottomOf="@id/tvEmailLabel"/>

        <TextView
            android:id="@+id/tvPasswordLabel"
            android:text="@string/label_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:layout_marginHorizontal="@dimen/dimen_16dp"
            app:layout_constraintTop_toBottomOf="@id/edtEmail"
            app:layout_constraintStart_toStartOf="@id/edtEmail"/>

        <com.ibnu.distory.base.component.PasswordEditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dimen_16dp"
            android:textSize="14sp"
            android:background="@drawable/bg_bordered_edit_text"
            android:maxLines="1"
            android:inputType="textPassword"
            android:layout_marginHorizontal="@dimen/dimen_16dp"
            android:hint="@string/hint_password"
            android:layout_marginTop="@dimen/dimen_12dp"
            app:layout_constraintTop_toBottomOf="@id/tvPasswordLabel"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_register"
            android:layout_marginHorizontal="@dimen/dimen_16dp"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:paddingVertical="@dimen/dimen_16dp"
            android:text="@string/action_register"
            style="@style/DistoryButton.WhiteText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edtPassword" />

    </LinearLayout>

    <include
        android:id="@+id/loading_layout"
        android:visibility="gone"
        layout="@layout/layout_loading" />

</RelativeLayout>