<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Toolbar
        android:id="@+id/toolbarAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:navigationIcon="@drawable/ic_back"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarAccount">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tx_food_image"
                style="@style/DistoryTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/label_photo_story"
                android:textSize="@dimen/font_medium" />

            <ImageView
                android:id="@+id/img_story_holder"
                android:layout_width="@dimen/dimen_300dp"
                android:layout_height="@dimen/dimen_300dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="16dp"
                android:background="@drawable/bg_dash_green_line"
                android:clickable="true"
                android:focusable="true"
                android:padding="16dp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_add_photo"
                app:backgroundTint="@null"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/img_story"
                android:layout_width="@dimen/dimen_300dp"
                android:layout_height="@dimen/dimen_300dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="16dp"
                android:clickable="true"
                android:focusable="true"
                android:scaleType="centerCrop"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_description"
                style="@style/DistoryTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/label_add_story_description"
                android:textSize="@dimen/font_medium" />

            <EditText
                android:id="@+id/edt_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/bg_bordered_edit_text"
                android:gravity="top"
                android:hint="@string/hint_add_story_description"
                android:inputType="textMultiLine"
                android:lines="5"
                android:maxLines="5"
                android:padding="@dimen/dimen_16dp"
                android:textColor="@color/black"
                android:textSize="@dimen/font_reg" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_marginHorizontal="@dimen/dimen_16dp"
                android:layout_marginTop="@dimen/dimen_16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tx_add_location"
                    style="@style/DistoryTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/label_add_current_location"
                    android:textSize="@dimen/font_medium"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/switch_location"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switch_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_position"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimen_16dp"
                android:layout_marginTop="@dimen/dimen_16dp"
                android:background="@drawable/bg_bordered_edit_text"
                android:padding="@dimen/dimen_16dp">

                <TextView
                    android:id="@+id/txLatitude"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/latitude"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvLatitude"
                    style="@style/DistoryTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_empty_input"
                    app:layout_constraintTop_toBottomOf="@id/txLatitude"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/txLongitude"
                    android:layout_marginTop="@dimen/dimen_8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_longitude"
                    app:layout_constraintTop_toBottomOf="@id/tvLatitude"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/tvLongitude"
                    style="@style/DistoryTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_empty_input"
                    app:layout_constraintTop_toBottomOf="@id/txLongitude"
                    app:layout_constraintStart_toStartOf="parent" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnGetLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_margin="@dimen/dimen_4dp"
                    android:background="@color/grey_700"
                    android:text="@string/ambil_lokasi"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvLongitude" />


            </androidx.constraintlayout.widget.ConstraintLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_upload_story"
                style="@style/DistoryButton.WhiteText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimen_16dp"
                android:layout_marginTop="@dimen/dimen_16dp"
                android:paddingVertical="@dimen/dimen_16dp"
                android:text="@string/action_add_story"/>



        </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>

    <include
        android:id="@+id/layout_loading"
        android:visibility="gone"
        layout="@layout/layout_loading"/>

</androidx.constraintlayout.widget.ConstraintLayout>